stderr
ChristmasSongTest.java:175: error: incompatible types: String cannot be converted to StringBuilder
        StringBuilder poem = "";
                             ^
1 error
